# ducklake

./: .env  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
notebooks/: ducklake_demo.ipynb
src/ducklake/: __init__.py  setup.py
