[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ducklake"
version = "0.1.0"
description = "Helpers for working with DuckLake from notebooks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb>=1.4.0",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]